syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    SpreadOpenMark records are created during the end-of-day rotation for each ticker and intended for use the following trading day.
    BaseObj:Spread
*/    
message SpreadOpenMark {
    message PKey {
        
        TickerKey skey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    double sr_cls_prc = 100; // SR close mark (close - 1min) (from previous day)
    double close_prc = 103; // official exchange closing mark  (from previous day)
    double bid_prc = 106; // bid price (SR mark from previous day)
    double ask_prc = 109; // ask price (SR mark from previous day)
    google.protobuf.Timestamp timestamp = 112;
}


